--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta property="og:title" content="Liberdade para Viajar" />
 		<meta property="og:description" content="O método para transformar seus gastos em passagens aéreas" />
-		<meta property="og:image" content="Logo LPV PNG.png" />
+		<meta property="og:image" content="/logo-lpv.png" />
 		<meta property="og:image:type" content="image/png" />
 		<meta property="og:image:width" content="400" />
 		<meta property="og:image:height" content="400" />
